# vkmax_hackathon

./: .env.example  BB Team.docx  BBTeam.pptx  LICENSE  README.md  Requierments.txt  Requirements.txt  docker-compose.yml  vkmax_hackathon.rar
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.local.yml  pyproject.toml
backend/maxhack/: config.py
backend/maxhack/bot/: __main__.py  dp.py  init_bot.py  states.py
backend/maxhack/bot/filters/: location_filter.py  request_contact.py  respond.py
backend/maxhack/bot/handlers/: __init__.py  getters.py  utils.py
backend/maxhack/bot/handlers/command/: deeplink.py
backend/maxhack/bot/handlers/commands/: router.py
backend/maxhack/bot/handlers/errors/: getters.py  router.py  windows.py
backend/maxhack/bot/handlers/group/: getters.py  handlers.py  windows.py
backend/maxhack/bot/handlers/group/create/: handlers.py  windows.py
backend/maxhack/bot/handlers/groups/: dialog.py  windows.py
backend/maxhack/bot/handlers/menu/: handlers.py  windows.py
backend/maxhack/bot/handlers/profile/: getters.py  handlers.py  router.py  utils.py  windows.py
backend/maxhack/bot/handlers/respond/: router.py
backend/maxhack/bot/handlers/start/: router.py
backend/maxhack/bot/handlers/unknown/: router.py
backend/maxhack/bot/middlewares/: __init__.py  current_user.py  logger_context.py  logging.py  save_user.py  throttling.py  user_context.py
backend/maxhack/bot/widgets/: empty_button.py  to_groups.py  to_menu.py  url_select.py
backend/maxhack/core/: config.py  exceptions.py  ids.py  service.py
backend/maxhack/core/enums/: notify_mode.py  respond_action.py
backend/maxhack/core/event/: models.py  service.py
backend/maxhack/core/group/: consts.py  service.py
backend/maxhack/core/ics/: service.py
backend/maxhack/core/invite/: service.py
backend/maxhack/core/max/: __init__.py  deeplinker.py  mass_mailer.py  notifier.py  sender.py
backend/maxhack/core/responds/: service.py
backend/maxhack/core/role/: ids.py
backend/maxhack/core/tag/: service.py
backend/maxhack/core/user/: models.py  service.py
backend/maxhack/core/utils/: datehelp.py  rate_limiter.py  timezones.py
backend/maxhack/database/models/: event.py  tags_to_events.py  users_to_events.py  users_to_groups.py  users_to_tags.py
backend/maxhack/database/repos/: event.py  group.py  user.py
backend/maxhack/di/: __init__.py  config.py  max_bot.py  scheduler.py
backend/maxhack/di/core/: services.py
backend/maxhack/di/database/: repos.py  session.py
backend/maxhack/infra/database/: connection.py  database_connection.py  transaction_manager.py  utils.py
backend/maxhack/infra/database/models/: __init__.py  _mixins.py  base.py  event.py  event_notify.py  group.py  invite.py  respond.py  role.py  tag.py  tags_to_events.py  user.py  users_to_events.py  users_to_groups.py  users_to_tags.py
backend/maxhack/infra/database/repos/: base.py  event.py  group.py  invite.py  respond.py  role.py  tag.py  user.py  users_to_groups.py
backend/maxhack/logger/: __init__.py  formatter.py  inject.py  setup.py
backend/maxhack/logger/bot/: context_vars.py
backend/maxhack/logger/web/: context_vars.py
backend/maxhack/scheduler/tasks/: notifies.py
backend/maxhack/utils/: fastapi_utils.py  json_serialization.py  log_config.py  utils.py
backend/maxhack/web/: __main__.py  dependencies.py  errors.py  main.py
backend/maxhack/web/routes/: __init__.py  auth.py  event.py  group.py  healthcheck.py  tag.py  user.py
backend/maxhack/web/schemas/: core.py  event.py  group.py  invite.py  role.py  tag.py  user.py
backend/maxhack/web/utils/: ics.py
backend/migrations/: env.py
backend/migrations/versions/: 2025.11.05_21.50_init.py  2025.11.07_04.54_invites.py  2025.11.07_05.25_short_users.py  2025.11.07_05.26_roles.py  2025.11.07_14.07_change_users.py  2025.11.08_15.41_change_events.py  2025.11.09_06.44_max_chat_id.py  2025.11.09_08.49_invite_key.py  2025.11.12_23.56_change_eventmodel.py  2025.11.13_17.30_users_photo.py  2025.11.13_23.36_notify_mode.py  2025.11.15_00.50_change_eventmodel.py  2025.11.15_03.28_m2m_soft.py  2025.11.15_06.20_roles.py
backend/tests/: conftest.py  mock.py  test_user_routes.py  utils.py
frontend/: Dockerfile  README.md  nginx.conf  orval.config.cjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: constants.ts  main.tsx  routeTree.gen.ts  routes.ts  styles.css
frontend/src/components/: avatar.tsx  card.tsx  header.tsx  member-card.tsx  retry-input.tsx  tag.tsx  timezone-input.tsx  timezone-select-modal.tsx
frontend/src/components/error/: error.tsx  not-found.tsx
frontend/src/components/event/: event-card.tsx  event-list.tsx
frontend/src/components/group/: Role.tsx  participant-select-modal.tsx  participants-input.tsx
frontend/src/components/group/guards/: MemberCan.tsx
frontend/src/components/group/tag/: group-tags.tsx  tag-color-select.tsx  tag-create-form.tsx
frontend/src/components/layout/: dynamic-page-layout.tsx  group-page-layout.tsx  max-bridge-layout.tsx  param-navigator-layout.tsx  root-layout.tsx
frontend/src/components/member/: member-card.tsx  member-invite.tsx  role-select.tsx  tags-input.tsx
frontend/src/components/side-bar/: side-bar-link.tsx  side-bar-section.tsx  side-bar.tsx
frontend/src/components/ui/: devider.tsx  dropdown.tsx  fallback-loader.tsx  floating-button.tsx  loader.tsx  ratio-input.tsx
frontend/src/hooks/: events.ts  groups.ts  invite.ts  members.ts  tags.ts  user.ts
frontend/src/integrations/max-ui/: root-provider.tsx
frontend/src/integrations/max-ui/hooks/: max-user.ts
frontend/src/lib/api/: client.ts  gen.schemas.ts  schema.yaml
frontend/src/lib/api/auth/: auth.ts
frontend/src/lib/api/events/: events.ts
frontend/src/lib/api/groups/: groups.ts
frontend/src/lib/api/tags/: tags.ts
frontend/src/lib/utils/: cron.ts
frontend/src/routes/: __root.tsx  index.tsx  max-error.tsx  profile.tsx  search.tsx  settings.tsx
frontend/src/routes/events/: $id.tsx  create.tsx
frontend/src/routes/groups/: $id.tsx  create.tsx
(+13 files in other folders)
