[build-system]
requires = ["uv_build==0.9.7"]
build-backend = "uv_build"

[project]
name = "maxhack"
version = "0.1.0"
description = "Бот макс"
authors = [
    { name = "Dyadechkov Ivan", email = "dyadechkoviv@uriit.ru" },
    { name = "Lesovoy Kirill", email = "lesovoi.k@velobike.ru" },
    { name = "Daniil Karpenko", email = "daniil.karpenk0@yandex.ru" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "maxo[magic-filter] @ git+https://github.com/K1rL3s/maxo.git@16682048063f67d84e2052fde74a916b433db4a5",
    "retejo[aiohttp] @ git+https://github.com/K1rL3s/retejo.git@0582f2a06fd7dc035e627c89bb293199f1622c42",
    "dishka==1.7.2",
    "sqlalchemy[asyncio]==2.0.44",
    "psycopg[binary]==3.2.12",
    "alembic==1.17.1",
    "alembic_utils==0.8.8",
    "orjson==3.11.4",
    "pydantic==2.12.4",
    "fastapi==0.121.0",
    "aiomisc==17.9.6",
    "uvicorn==0.38.0",
    "itsdangerous==2.2.0",
    "granian[reload]==2.5.7",
    "uvloop==0.22.1; platform_system != 'Windows'",
    "faststream==0.6.3",
    "taskiq==0.11.20",
    "taskiq-redis==1.1.2",
    "redis==6.4.0",
    "dotenv==0.9.9",
    "timezonefinder>=8.1.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.2",
    "pytest-asyncio==1.2.0",
]
dev = [
    "mypy==1.16.0",
    "ruff==0.14.4",
    "black==25.9.0",
    "python-dotenv==1.0.1",
    "asyncpg==0.30.0"
]

[tool.uv.build-backend]
module-root = ""

[tool.mypy]
files = ["maxhack", "migrations", "tests"]
strict = true
strict_bytes = true
local_partial_types = true

[tool.ruff]
include = ["maxhack/**/*.py", "migrations/**/*.py", "tests/**/*.py", "pyproject.toml"]
fix = true
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "DOC", # https://docs.astral.sh/ruff/rules/#pydoclint-doc
    "D", # https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "TC006", # https://docs.astral.sh/ruff/rules/runtime-cast-value/
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "N818", # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
    "RUF001", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "RUF002", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-docstring/
    "RUF003", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    "FIX", # https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
    "TD003", # https://docs.astral.sh/ruff/rules/missing-todo-link/
    "TD002", # https://docs.astral.sh/ruff/rules/missing-todo-author/
    "PLR0904", # https://docs.astral.sh/ruff/rules/too-many-public-methods/
    "PLR0911", # https://docs.astral.sh/ruff/rules/too-many-return-statements/
    "PLR0912", # https://docs.astral.sh/ruff/rules/too-many-branches/
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "PLR0914", # https://docs.astral.sh/ruff/rules/too-many-locals/
]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
known-local-folder = ["maxhack"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"migrations/**/*.py" = ["N999", "ARG001",]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.py$'

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::DeprecationWarning",
]
